// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organisations should render no organisations if the user has not requested any access 1`] = `
<Fragment>
  <Card
    bg="light"
    body={false}
  >
    <CardBody>
      Operator, Operation Representative, and Reporting Operation are defined in the
       
      <a
        href="http://www.bclaws.ca/civix/document/id/lc/statreg/249_2015"
        rel="noreferrer noopener"
        target="_blank"
      >
        Greenhouse Gas Emission Reporting Regulation
      </a>
       
      of the
       
      <a
        href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
        rel="noreferrer noopener"
        target="_blank"
      >
        Greenhouse Gas Industrial Reporting and Control Act
      </a>
      .
    </CardBody>
  </Card>
  <br />
  <div>
    <Card
      body={false}
      style={
        Object {
          "marginTop": "50px",
        }
      }
    >
      <CardBody>
        <Dropdown
          className="search-dropdown"
          navbar={false}
        >
          <h2
            className="jsx-3491480756"
          >
            Request access to apply for the CIIP on behalf of a Reporting Operation:
          </h2>
          <Alert
            closeLabel="Close alert"
            show={true}
            transition={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "appear": false,
                  "in": false,
                  "mountOnEnter": false,
                  "timeout": 300,
                  "unmountOnExit": false,
                },
                "displayName": "Fade",
                "render": [Function],
              }
            }
            variant="warning"
          >
            <p
              className="jsx-3491480756"
            >
              The CleanBC Industrial Incentive Program application must be submitted by the Operator of the Reporting Operation or, if there is more than one Operator, the Designated Operator as defined by the
               
              <AlertLink
                href="https://www.bclaws.ca/civix/document/id/lc/statreg/249_2015"
                rel="noreferrer noopener"
                target="_blank"
              >
                Greenhouse Gas Emission Reporting Regulation
              </AlertLink>
               
              of the
               
              <AlertLink
                href="https://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
                rel="noreferrer noopener"
                target="_blank"
              >
                Greenhouse Gas Industrial Reporting and Control Act
              </AlertLink>
              . Other representatives of the Reporting Operation may complete the application if authorization from the Operator is provided.
            </p>
            <p
              className="jsx-3491480756"
            >
              Further information about CIIP can be found on the
               
              <AlertLink
                href="https://www2.gov.bc.ca/gov/content?id=6F748A4DD83447C59B8B9361882FF9A3"
                rel="noreferrer noopener"
                target="_blank"
              >
                CIIP website
              </AlertLink>
              .
            </p>
            <p
              className="jsx-3491480756"
            >
              If you have any questions, please email
               
              <AlertLink
                href="#"
              />
              .
            </p>
          </Alert>
          <small
            className="jsx-3491480756"
            style={
              Object {
                "display": "block",
                "marginBottom": "20px",
              }
            }
          >
            (You can search to narrow the results in the dropdown)
          </small>
          <DropdownToggle
            className="search-toggle"
            id="org-dropdown"
          >
            Select Operator
          </DropdownToggle>
          <DropdownMenu
            align="left"
            alignRight={false}
            flip={true}
          >
            <FormControl
              className="mx-3 my-2 w-auto"
              onChange={[Function]}
              placeholder="Search..."
            />
            <div
              className="jsx-3491480756 org-scroll"
            />
          </DropdownMenu>
        </Dropdown>
        <hr
          className="jsx-3491480756"
        />
        If you cannot find your operator in the list, please
         
        <a
          className="jsx-3491480756"
          href="#"
        >
          contact CAS
        </a>
         for assistance.
        <JSXStyle
          id="3491480756"
        >
          .org-scroll.jsx-3491480756{max-height:250px;overflow:hidden;overflow-y:scroll;}
        </JSXStyle>
      </CardBody>
    </Card>
  </div>
</Fragment>
`;

exports[`Organisations should render the user's requested organisations 1`] = `
<Fragment>
  <Card
    bg="light"
    body={false}
  >
    <CardBody>
      Operator, Operation Representative, and Reporting Operation are defined in the
       
      <a
        href="http://www.bclaws.ca/civix/document/id/lc/statreg/249_2015"
        rel="noreferrer noopener"
        target="_blank"
      >
        Greenhouse Gas Emission Reporting Regulation
      </a>
       
      of the
       
      <a
        href="http://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
        rel="noreferrer noopener"
        target="_blank"
      >
        Greenhouse Gas Industrial Reporting and Control Act
      </a>
      .
    </CardBody>
  </Card>
  <br />
  <ForwardRef
    bordered={true}
    hover={true}
    striped={true}
    style={
      Object {
        "marginBottom": "40px",
        "textAlign": "left",
      }
    }
  >
    <thead
      className="jsx-1706603431"
    >
      <tr
        className="jsx-1706603431"
      >
        <th
          className="jsx-1706603431 col-md-8"
        >
          Operator
        </th>
        <th
          className="jsx-1706603431 col-md-2"
        >
          Access Status
        </th>
        <th
          className="jsx-1706603431 col-md-2"
        >
          Operations/Facilities
        </th>
      </tr>
    </thead>
    <tbody
      className="jsx-1706603431"
    >
      <Relay(UserOrganisationComponent)
        key="OrgId"
        userOrganisation={
          Object {
            " $fragmentRefs": Object {
              "UserOrganisation_userOrganisation": true,
            },
            "id": "OrgId",
            "organisationId": 1,
            "status": "PENDING",
          }
        }
      />
    </tbody>
    <JSXStyle
      id="1706603431"
    >
      th.jsx-1706603431{padding:20px;font-weight:500;}
    </JSXStyle>
  </ForwardRef>
  <div>
    <Card
      body={false}
      style={
        Object {
          "marginTop": "50px",
        }
      }
    >
      <CardBody>
        <Dropdown
          className="search-dropdown"
          navbar={false}
        >
          <h2
            className="jsx-3491480756"
          >
            Request access to apply for the CIIP on behalf of a Reporting Operation:
          </h2>
          <Alert
            closeLabel="Close alert"
            show={true}
            transition={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "appear": false,
                  "in": false,
                  "mountOnEnter": false,
                  "timeout": 300,
                  "unmountOnExit": false,
                },
                "displayName": "Fade",
                "render": [Function],
              }
            }
            variant="warning"
          >
            <p
              className="jsx-3491480756"
            >
              The CleanBC Industrial Incentive Program application must be submitted by the Operator of the Reporting Operation or, if there is more than one Operator, the Designated Operator as defined by the
               
              <AlertLink
                href="https://www.bclaws.ca/civix/document/id/lc/statreg/249_2015"
                rel="noreferrer noopener"
                target="_blank"
              >
                Greenhouse Gas Emission Reporting Regulation
              </AlertLink>
               
              of the
               
              <AlertLink
                href="https://www.bclaws.ca/civix/document/id/complete/statreg/14029_01"
                rel="noreferrer noopener"
                target="_blank"
              >
                Greenhouse Gas Industrial Reporting and Control Act
              </AlertLink>
              . Other representatives of the Reporting Operation may complete the application if authorization from the Operator is provided.
            </p>
            <p
              className="jsx-3491480756"
            >
              Further information about CIIP can be found on the
               
              <AlertLink
                href="https://www2.gov.bc.ca/gov/content?id=6F748A4DD83447C59B8B9361882FF9A3"
                rel="noreferrer noopener"
                target="_blank"
              >
                CIIP website
              </AlertLink>
              .
            </p>
            <p
              className="jsx-3491480756"
            >
              If you have any questions, please email
               
              <AlertLink
                href="#"
              />
              .
            </p>
          </Alert>
          <small
            className="jsx-3491480756"
            style={
              Object {
                "display": "block",
                "marginBottom": "20px",
              }
            }
          >
            (You can search to narrow the results in the dropdown)
          </small>
          <DropdownToggle
            className="search-toggle"
            id="org-dropdown"
          >
            Select Operator
          </DropdownToggle>
          <DropdownMenu
            align="left"
            alignRight={false}
            flip={true}
          >
            <FormControl
              className="mx-3 my-2 w-auto"
              onChange={[Function]}
              placeholder="Search..."
            />
            <div
              className="jsx-3491480756 org-scroll"
            />
          </DropdownMenu>
        </Dropdown>
        <hr
          className="jsx-3491480756"
        />
        If you cannot find your operator in the list, please
         
        <a
          className="jsx-3491480756"
          href="#"
        >
          contact CAS
        </a>
         for assistance.
        <JSXStyle
          id="3491480756"
        >
          .org-scroll.jsx-3491480756{max-height:250px;overflow:hidden;overflow-y:scroll;}
        </JSXStyle>
      </CardBody>
    </Card>
  </div>
</Fragment>
`;
